Change API connected to secrets and variables
