# backend/docs/server/swagger.json
@@ -913,8 +913,20 @@
                     },
                     {
                         "type": "string",
-                        "description": "Secret name (pattern)",
-                        "name": "name",
+                        "description": "Secret key (pattern)",
+                        "name": "key",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Secret project ID (exact)",
+                        "name": "pipeline_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Secret pipeline ID (exact)",
+                        "name": "project_id",
                         "in": "query"
                     }
                 ],
@@ -1371,7 +1383,19 @@
                     {
                         "type": "string",
                         "description": "Variable name (pattern)",
-                        "name": "name",
+                        "name": "key",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Variable project ID (exact)",
+                        "name": "pipeline_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Variable pipeline ID (exact)",
+                        "name": "project_id",
                         "in": "query"
                     }
                 ],
@@ -2035,6 +2059,12 @@
         "model.PipelineConfig": {
             "type": "object",
             "properties": {
+                "cleanup": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "image": {
                     "type": "string"
                 },
@@ -2184,6 +2214,9 @@
                 "key": {
                     "type": "string"
                 },
+                "path": {
+                    "type": "string"
+                },
                 "pipeline_id": {
                     "type": "string"
                 },
@@ -2199,6 +2232,9 @@
             "type": "object",
             "properties": {
                 "key": {
+                    "type": "string"
+                },
+                "path": {
                     "type": "string"
                 },
                 "pipeline_id": {
@@ -2249,6 +2285,9 @@
                 "key": {
                     "type": "string"
                 },
+                "path": {
+                    "type": "string"
+                },
                 "pipeline_id": {
                     "type": "string"
                 },
@@ -2267,6 +2306,9 @@
             "type": "object",
             "properties": {
                 "key": {
+                    "type": "string"
+                },
+                "path": {
                     "type": "string"
                 },
                 "pipeline_id": {
@@ -2407,11 +2449,7 @@
                 1000000,
                 1000000000,
                 60000000000,
-                3600000000000,
-                1,
-                1000,
-                1000000,
-                1000000000
+                3600000000000
             ],
             "x-enum-varnames": [
                 "minDuration",
@@ -2421,11 +2459,7 @@
                 "Millisecond",
                 "Second",
                 "Minute",
-                "Hour",
-                "Nanosecond",
-                "Microsecond",
-                "Millisecond",
-                "Second"
+                "Hour"
             ]
         },
         "util.Message": {
